# 20260601_reu_project

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  ruff.yaml  unit-test.yaml
data/pocket_refs/: dnak_sbd_pocket.yaml
data_fetching/: __init__.py  fetch_architectures_dnaj.py  fetch_proteins_dnak.py  fetch_types.py  utils.py
docs/: jdp_classifier_calibration.md  pocket_validation.md
jdp_classifier/: __init__.py  architecture.py  classify.py  cli.py  constants.py  hpd.py  localization.py  rules.py  sequence.py
scripts/: __init__.py  extract_uniprot_ids.py  merge_all_features.py  merge_features.py  rockfish_queue.py
scripts/slurm/: affetch_rockfish.sh  analyze_pocket_rockfish.sh  conda_env.yaml  conda_env_pocket.yaml  rockfish_common.sh  submit_affetch_rockfish.sh  submit_analyze_pocket_rockfish.sh
structure_analysis/: __init__.py  alignment.py  analyze.py  charge.py  cli.py  constants.py  geometry.py  pdb_io.py  pocket_reference.py  quality.py  validation.py
tests/: __init__.py  test_charge.py  test_console_scripts.py  test_extract_uniprot_ids.py  test_fetch_dnaj.py  test_fetch_dnak.py  test_jdp_classifier.py  test_merge_all_features.py  test_merge_features.py  test_regression.py  test_rockfish_queue.py  test_slurm_regression.py
