[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "reu-data-fetching"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"aiohttp>=3.9",
	"tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.0",
	"pytest-asyncio>=0.23",
]

[project.scripts]
fetch-proteins-dnak = "data_fetching.fetch_proteins_dnak:cli"
fetch-architectures-dnaj = "data_fetching.fetch_architectures_dnaj:cli"
extract-uniprot-ids = "scripts.extract_uniprot_ids:main"
prepare-rockfish-accessions = "scripts.rockfish_queue:main_prepare"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_fetching*", "scripts*"]

[tool.ruff]
line-length = 120
output-format = "grouped"
respect-gitignore = true
show-fixes = true

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]

ignore = [
	"YTT",    # flake8-2020
	"CPY",    # flake8-copyright"
	"COM812", # missing-trailing-comma
	"COM819", # prohibited-trailing-comma
	"D206",   # docstring-tab-indentation
	"D300",   # triple-single-quotes
	"E111",   # indentation-with-invalid-multiple
	"E114",   # indentation-with-invalid-multiple-comment
	"E117",   # over-indented
	"E501",   # line-too-long
	"Q000",   # bad-quotes-inline-string
	"Q001",   # bad-quotes-multiline-string
	"Q002",   # bad-quotes-docstring
	"Q003",   # avoidable-escaped-quote
	"W191",   # tab-indentation
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401"]
# assert, private member access, and magic values are standard and expected in pytest
"tests/*" = ["S101", "SLF001", "PLR2004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
